--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,20 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  color: #C7EB78;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Luckiest Guy', cursive;
   font-size: 70px;
   margin: 30px;
-  color: #C7EB78;
+  color: white;
 }
 
 h2 {
   margin: 100px 30px;
 }
+
+/* HEADER */
 
 header, #hero, footer {
   text-align: center;
@@ -29,6 +30,8 @@ header {
   background-color: #85419ec7;
   width: 100%;
 }
+
+/* HERO SECTION */
 
 #hero {
   background-color: #CD78EB;
@@ -45,6 +48,12 @@ header {
   width: 500px;
 }
 
+/* BIO SECTION */
+
+#bio {
+  margin-top: 300px;
+}
+
 #bio .subject {
   font-size: 30px;
   margin-left: 100px;
@@ -56,9 +65,44 @@ header {
   padding: 20px;
   width: fit-content;
   margin-left: 200px;
-  color: white;
   border-radius: 1rem;
 }
+
+/* HOBBIES SECTION */
+
+#hobbies {
+  margin-top: 300px;
+}
+
+li {
+  position: relative;
+  list-style: none;
+  font-size: 25px;
+  margin-bottom: 80px;
+}
+
+li::before {
+  content: '';
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+  background-color: #7C9E31;
+  margin-right: 70px;
+}
+
+li::after {
+  content: '';
+  position: absolute;
+  left: 40px;
+  bottom: -4px;
+  width: 0;
+  height: 0;
+  border-top: 20px solid transparent;
+  border-left: 40px solid #7C9E31;
+  border-bottom: 20px solid transparent;
+}
+
+/* MUSIC SECTION */
 
 #tune {
   margin: 200px 0;
@@ -73,7 +117,7 @@ header {
 }
 
 #music {
-  width: 90%;
+  width: 85%;
   height: auto;
   margin: 50px auto;
   background-color:#d1f08e;
@@ -81,9 +125,6 @@ header {
   border: 20px groove black;
 }
 
-footer {
-  padding: 30px;
-}
 
 .mi {
   align-self: flex-start;
@@ -107,4 +148,10 @@ footer {
   gap: 20px;
   height: 100px;
   margin: 100px;
+}
+
+/* FOOTER SECTION */
+
+footer {
+  padding: 30px;
 }
