--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  box-sizing: border-box;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -40,8 +41,13 @@ header {
   margin: 10px auto;
   font-weight: bolder;
   color: black;
-  border: 15px dotted #C7EB78;
   border-radius: 3rem;
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  box-shadow: 
+    inset 7px 7px 10px rgba(0, 0, 0, 0.3),
+    inset -5px -5px 10px rgba(0, 0, 0, 0.3),
+    3px 3px 20px rgba(255, 255, 255, 0.3),
+    -7px -7px 20px rgba(0, 0, 0, 0.3)
 }
 
 #hero img{
@@ -72,9 +78,21 @@ header {
 
 #hobbies {
   margin-top: 300px;
+  text-align: center;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+li:nth-child(3n) {
+  color: white;
 }
 
 li {
+  text-align: left;
   position: relative;
   list-style: none;
   font-size: 25px;
@@ -100,6 +118,12 @@ li::after {
   border-top: 20px solid transparent;
   border-left: 40px solid #7C9E31;
   border-bottom: 20px solid transparent;
+}
+
+/* PHOTO GALLERY */
+
+#gallery {
+  margin-top: 300px;
 }
 
 /* MUSIC SECTION */
