--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,8 @@ hr {
 
 #form-container label {
   padding: 10px;
+  font-variant: small-caps;
+  font-size: 24px;
 }
 
 #form-container input, 
@@ -223,7 +225,18 @@ hr {
 #form-container textarea{
   margin-bottom: 20px;
   font-size: 18px;
-  padding: 10px;
+  padding: 15px 30px;
+  background-color: #7C9E31;
+  border-radius: 2rem;
+  border: none;
+  box-shadow: 
+    inset 1px 1px 3px rgba(0, 0, 0, 0.3),
+    inset -1px -1px 3px rgba(0, 0, 0, 0.3);
+}
+
+#message {
+  width: 500px;
+  height: 100px;
 }
 
 /* MUSIC SECTION */
