--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: #85419E;
   font-size: 20px;
   width: 100%;
@@ -14,7 +14,8 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Luckiest Guy', cursive;
+  font-family: 'Open Sans', sans-serif;
+  font-variant: small-caps;
   font-size: 50px;
   margin: 30px;
   color: white;
@@ -27,96 +28,120 @@ section, article {
 
 /* HEADER */
 
-header, #hero, footer {
+#hero, footer {
   text-align: center;
 }
 
 header {
-  position: relative;
-  top: 0;
-  display: flex;
-  flex-direction: column;
   padding: 10px;
-  background-color: #85419ec7;
   width: 100%;
-  height: auto;
-  text-align: center;
-}
-
-#logo {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: auto;
+  height: 200px;
 }
 
 #logo img {
+  position: absolute;
   width: 100px;
-  margin: auto;
+  border-radius: 50%;
+  z-index: 12;
 }
 
-nav {
-  position: relative;
+#main-nav, #mobile-nav {
+  font-variant: small-caps;
+  color: white;
+}
+
+#main-nav {
+  display: none;
+}
+
+#mobile-nav {
+  position: fixed;
+  font-size: 2em;
+  top: 0;
+  left: 0;
   width: 100%;
-  overflow-x: scroll;
-  overflow-y: hidden;
+  height: 100%;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  background-color:#7C9E31;
+  z-index: 11;
 }
 
-nav ul{
-  display: flex;
+#nav-links {
   list-style: none;
-  margin: 0;
+  text-align: center;
   padding: 0;
 }
 
-nav li {
-  background-color: #7C9E31;
-  text-align: center;
-  flex-basis: 160px;
-  flex-shrink: 0;
-  flex-grow: 1;
-  max-width: auto;
-  padding: 10px 0;
-  margin: 20px 5px 0;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  box-shadow: 
-    inset 5px 5px 7px rgba(0, 0, 0, 0.3),
-    inset -2px -2px 5px rgba(0, 0, 0, 0.3);
+#mobile-nav li {
+  margin: 2em;
 }
 
-nav a {
+#nav-links li a {
   text-decoration: none;
-  color: black;
-  padding: 5px;
+  color: white;
 }
 
-nav a:hover, nav a:active {
-  text-shadow: 0 0 7px white;
-  text-decoration: overline;
-  text-decoration-color: white;
+#nav-links li a:hover {
+  background-color: black;
 }
 
-#back-to-top {
+a.open-nav, a.close-nav {
+  display: block;
   position: fixed;
-  font-size: 16px;
-  bottom: 0;
-  right: 0;
-  margin: 5px;
+  top: 15px;
+  right: 15px;
   width: 60px;
-  text-align: center;
-  padding: 5px;
-  border-radius: 1rem;
-  font-weight: 800;
-  text-decoration: none;
-  color: black;
-  z-index: 10;
+  height: 50px;
+  background-color:#7C9E31;
+  border-radius: .3em;
+  z-index: 11;
 }
 
-#back-to-top img:hover, #back-to-top img:active {
+a.close-nav {
+  display: none;
+}
+
+.toggle {
+  display: block;
+  position: relative;
+  width: 30px;
+  height: 5px;
+  border-radius: 1rem;
   background-color: white;
-  border-radius: 100%;
-  outline: 2px solid black;
+  margin: 17.5px auto;
+}
+
+a.open-nav .toggle::before, a.close-nav .toggle::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 10px;
+  width: 30px;
+  height: 5px;
+  border-radius: 1rem;
+  background-color: white;
+}
+
+#header:target a.open-nav {
+  display: none;
+}
+
+#header:target a.close-nav {
+  display: block;
+}
+
+#header:target a.close-nav .toggle {
+  transform: translateY(5px) rotate(45deg);
+}
+
+#header:target a.close-nav .toggle::before {
+  transform: translateY(-10px) rotate(-90deg);
+}
+
+#header:target #mobile-nav {
+  display: flex;
 }
 
 
@@ -129,11 +154,8 @@ nav a:hover, nav a:active {
   margin: 20px auto;
   font-weight: bolder;
   color: black;
-  border-radius: 3rem;
+  border-radius: .5em;
   border: 1px solid rgba(0, 0, 0, 0.4);
-  box-shadow: 
-    inset 7px 7px 10px rgba(0, 0, 0, 0.3),
-    inset -5px -5px 10px rgba(0, 0, 0, 0.3);
 }
 
 #hero img{
@@ -155,11 +177,12 @@ nav a:hover, nav a:active {
 }
 
 #bio .answer, #directions {
-  background-color: #7C9E31;
+  background-color: #CD78EB;
   max-width: 600px;
+  width: 95%;
   padding: 20px;
   width: fit-content;
-  border-radius: 1rem;
+  border-radius: .5em;
   margin: auto;
 }
 
@@ -170,6 +193,7 @@ nav a:hover, nav a:active {
   display: flex;
   flex-direction: column;
   max-width: 430px;
+  width: 95%;
 }
 
 #hobbies h2 {
@@ -237,13 +261,10 @@ audio {
 /* PHOTO GALLERY */
 
 #gallery {
-  width: auto;
+  width: 95%;
   margin: auto;
   text-align: center;
-  border-radius: 3rem;
-  box-shadow: 
-    inset 7px 7px 10px rgba(0, 0, 0, 0.3),
-    inset -5px -5px 10px rgba(0, 0, 0, 0.3);
+  border-radius: .5em;
   padding: 20px;
   background-color: #CD78EB;
 }
@@ -254,16 +275,15 @@ audio {
 }
 
 figure img {
-  border: 15px groove black;
+  border: 10px double black;
   max-width: 100%;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.473);
 }
 
 figcaption {
   padding: 15px;
-  background-color: #7C9E31;
   margin: 20px auto;
-  border-radius: 3rem;
+  border-radius: .5em;
 }
 
 hr {
@@ -276,12 +296,10 @@ hr {
 #lit {
   margin: auto;
   max-width: 800px;
-  background-color: #c7eb78;
+  width: 95%;
+  background-color: #CD78EB;
   padding: 2rem 2rem;
-  border-radius: 4rem;
-  box-shadow: 
-    inset 7px 7px 10px rgba(0, 0, 0, 0.3),
-    inset -5px -5px 10px rgba(0, 0, 0, 0.3);
+  border-radius: .5em;
 }
 
 #lit h2 {
@@ -294,39 +312,41 @@ hr {
 #lit p:first-child:first-letter {
   float: left;
   font-size: 120px;
-  padding: 15px 30px;
+  padding: 20px;
   margin: 10px;
-  background-color: #CD78EB;
-  box-shadow: 
-    inset 7px 7px 10px rgba(0, 0, 0, 0.3),
-    inset -5px -5px 10px rgba(0, 0, 0, 0.3);
+  background-color: #7C9E31;
   border-radius: 50% 40% 60% 50%;
   border: 5px double #85419E;
-  font-family: 'Luckiest Guy', cursive;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /* FORM SECTION */
 
 #form {
   max-width: 800px;
+  width: 95%;
   margin: auto;
   color: white;
 }
 
 fieldset {
-  margin: 1rem 1rem;
+  border-radius: .5em;
   border: 5px double black;
-  border-radius: 2rem;
+}
+
+legend {
+  background-color: #CD78EB;
+  color: black;
+  border-radius: .5em;
+  padding: 10px;
 }
 
 #form-elements {
   display: grid;
   row-gap: 15px;
-  margin: 1em;
 }
 
 #form-elements label {
-  font-variant: small-caps;
   font-size: 22px;
   position: relative;
 }
@@ -335,31 +355,27 @@ fieldset {
 #form-elements select, 
 #form-elements textarea,
 #form-elements button {
-  padding: 15px 20px;
+  padding: 12px 7px;
   font-size: 18px;
   background-color: #7C9E31;
-  border-radius: 2rem;
+  border-radius: .5em;
   border: none;
-  box-shadow: 
-    inset 1px 1px 3px rgba(0, 0, 0, 0.3),
-    inset -1px -1px 3px rgba(0, 0, 0, 0.3);
+  margin: 0;
 }
 
 #form-elements button {
   margin: auto;
-  background-color: black;
-  color: white;
-  box-shadow: 
-    inset 1px 1px 3px rgba(255, 255, 255, 0.3),
-    inset -1px -1px 3px rgba(255, 255, 255, 0.3);
+  background-color: #7C9E31;
+  color: black;
+  font-family: 'Open Sans', sans-serif;
+  font-variant: small-caps;
+  font-size: 2em;
 }
 
 #form-elements button:hover, #form-elements button:active {
-  background-color: #7C9E31;
-  color: black;
-  box-shadow: 
-    inset 1px 1px 3px rgba(0, 0, 0, 0.3),
-    inset -1px -1px 3px rgba(0, 0, 0, 0.3);
+  color: white;
+  background-color: black;
+  cursor: pointer;
 }
 
 #form-elements textarea {
@@ -394,10 +410,10 @@ li input:checked + label::after {
   content: '';
   display: inline-block;
   position: absolute;
-  left: -42.37px;
+  left: -44px;
   top: 25%;
-  width: 15px;
-  height: 15px;
+  width: 18px;
+  height: 18px;
   border-radius: 50%;
   background-color: black;
 }
@@ -417,10 +433,7 @@ li input:checked + label::after {
   height: auto;
   margin: 50px auto;
   padding: 10px;
-  box-shadow: 
-    inset 7px 7px 10px rgba(0, 0, 0, 0.3),
-    inset -5px -5px 10px rgba(0, 0, 0, 0.3);
-  border-radius: 3rem;
+  border-radius: .5em;
 }
 
 
@@ -450,7 +463,7 @@ li input:checked + label::after {
   margin: 100px auto;
   gap: 2px;
   padding: 5px;
-  border-radius: 2rem;
+  border-radius: .5em;
 }
 
 .a-section {
@@ -483,8 +496,14 @@ li input:checked + label::after {
   width: 100%;
 }
 
-figcaption {
+#video figcaption {
   text-align: center;
+  background-color: #CD78EB;
+  width: 95%;
+}
+
+#back-to-top {
+  display: none;
 }
 
 /* FOOTER SECTION */
@@ -492,11 +511,55 @@ figcaption {
 footer {
   padding: 30px;
   color: white;
+  display: flex;
+  flex-direction: column;
+  font-size: .8em;
 }
 
 /*MEDIA QUERIES */
 
 @media screen and (min-width: 60em) {
+  #back-to-top {
+    display: block;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    padding: 15px;
+    z-index: 10;
+  }
+  
+  #back-to-top img:hover, #back-to-top img:active {
+    background-color: white;
+    border-radius: 100%;
+  }
+
+  fieldset {
+    margin: 1em;
+  }
+
+  #form-elements {
+    margin: 1em;
+  }
+
+  #mobile-nav, a.open-nav, a.close-nav {
+    display: none;
+  }
+
+  #main-nav {
+    display: block;
+    font-size: 1em;
+    position: absolute;
+    top: 1em;
+    right: 0;
+    width: fit-content;
+    padding: 0 2em;
+    background-color:#7C9E31;
+  }
+
+  #nav-links {
+    display: flex;
+    gap: 2em;
+  }
 
   h1, h2, h3, h4, h5, h6 {
     font-size: 70px;
@@ -512,7 +575,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     margin: auto;
     margin-left: 3rem;
   }
@@ -536,9 +599,6 @@ footer {
 }
 
 @media screen and (min-width: 100em) {
-  nav {
-    overflow-x: hidden;
-  }
 
   #gallery {
     display: grid;
