--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@ section, article {
   padding-top: 150px;
 }
 
+a:focus {
+  outline: 3px double black;
+}
+
 /* HEADER */
 
 #hero, footer {
@@ -47,7 +51,6 @@ header {
 
 #main-nav, #mobile-nav {
   font-variant: small-caps;
-  color: white;
 }
 
 #main-nav {
@@ -80,11 +83,12 @@ header {
 
 #nav-links li a {
   text-decoration: none;
-  color: white;
+  color: black;
 }
 
 #nav-links li a:hover {
   background-color: black;
+  color: white;
 }
 
 a.open-nav, a.close-nav {
@@ -99,6 +103,10 @@ a.open-nav, a.close-nav {
   z-index: 11;
 }
 
+a.open-nav:hover, a.close-nav:hover {
+  background-color: black;
+}
+
 a.close-nav {
   display: none;
 }
@@ -109,7 +117,7 @@ a.close-nav {
   width: 30px;
   height: 5px;
   border-radius: 1rem;
-  background-color: white;
+  background-color: black;
   margin: 17.5px auto;
 }
 
@@ -121,6 +129,14 @@ a.open-nav .toggle::before, a.close-nav .toggle::before {
   width: 30px;
   height: 5px;
   border-radius: 1rem;
+  background-color: black;
+}
+
+a.open-nav:hover .toggle, a.close-nav:hover .toggle {
+  background-color: white;
+}
+
+a.open-nav:hover .toggle::before, a.close-nav:hover .toggle::before {
   background-color: white;
 }
 
@@ -164,6 +180,16 @@ a.open-nav .toggle::before, a.close-nav .toggle::before {
 #hero img{
   width: 500px;
   max-width: 100%;
+}
+
+#hero h1 {
+  color: black;
+  font-size: 2em;
+}
+
+#hero h2 {
+  color: black;
+  font-size: 1.5em;
 }
 
 /* BIO SECTION */
@@ -280,7 +306,7 @@ audio {
 figure img {
   border: 10px double black;
   max-width: 100%;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.473);
+  border-radius: .5em;
 }
 
 figcaption {
@@ -372,7 +398,8 @@ legend {
   color: black;
   font-family: 'Open Sans', sans-serif;
   font-variant: small-caps;
-  font-size: 2em;
+  font-size: 1.5em;
+  width: 60%;
 }
 
 #form-elements button:hover, #form-elements button:active {
@@ -527,13 +554,14 @@ footer {
     position: fixed;
     bottom: 0;
     right: 0;
-    padding: 15px;
+    margin: 15px;
     z-index: 10;
+    border-radius: 5em;
   }
   
   #back-to-top img:hover, #back-to-top img:active {
-    background-color: white;
-    border-radius: 100%;
+    background-color: #7C9E31;
+    border-radius: 50%;
   }
 
   fieldset {
