--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 section, article {
-  padding-top: 150px;
+  margin-top: 150px;
 }
 
 a:focus {
@@ -171,7 +171,7 @@ a.open-nav:hover .toggle::before, a.close-nav:hover .toggle::before {
   width: 95%;
   max-width: 800px;
   padding: 20px;
-  margin: 20px auto;
+  margin: auto;
   font-weight: bolder;
   color: black;
   border-radius: .5em;
@@ -179,8 +179,10 @@ a.open-nav:hover .toggle::before, a.close-nav:hover .toggle::before {
 }
 
 #hero img{
-  width: 500px;
+  width: 400px;
   max-width: 100%;
+  border-radius: .5em;
+  border: 10px double black;
 }
 
 #hero h1 {
@@ -218,7 +220,6 @@ a.open-nav:hover .toggle::before, a.close-nav:hover .toggle::before {
 /* HOBBIES SECTION */
 
 #hobbies {
-  margin: auto;
   display: flex;
   flex-direction: column;
   max-width: 430px;
@@ -289,18 +290,13 @@ audio {
 
 /* PHOTO GALLERY */
 
-#gallery {
+#gallery-container {
   width: 95%;
   margin: auto;
   text-align: center;
   border-radius: .5em;
   padding: 20px;
   background-color: #CD78EB;
-}
-
-#gallery h2 {
-  margin: 50px auto;
-  color: black;
 }
 
 figure img {
@@ -322,7 +318,7 @@ hr {
 
 /* LIT SECTION */
 
-#lit {
+#lit-container {
   margin: auto;
   max-width: 800px;
   width: 95%;
@@ -331,14 +327,7 @@ hr {
   border-radius: .5em;
 }
 
-#lit h2 {
-  color: black;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-}
-
-#lit p:first-child:first-letter {
+#lit-container p:first-child:first-letter {
   float: left;
   font-size: 120px;
   padding: 20px;
@@ -354,7 +343,8 @@ hr {
 #form {
   max-width: 800px;
   width: 95%;
-  margin: auto;
+  margin-right: auto;
+  margin-left: auto;
   color: white;
 }
 
@@ -611,7 +601,7 @@ footer {
     margin-left: 3rem;
   }
 
-  #lit {
+  #lit-container {
     max-width: 100%;
     columns: 25rem;
   }
@@ -631,13 +621,9 @@ footer {
 
 @media screen and (min-width: 100em) {
 
-  #gallery {
+  #gallery-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-  }
-
-  #gallery h2 {
-    grid-column: 1/-1;
   }
 
   hr {
