--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,17 @@
   box-sizing: border-box;
 }
 
+:root {
+  --dark-purp: #a470b7;
+  --light-purp: #c89dd8;
+  --green: #92af53;
+
+}
+
 body {
+  background-color: var(--dark-purp);
+  background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M54.627 0l.83.828-1.415 1.415L51.8 0h2.827zM5.373 0l-.83.828L5.96 2.243 8.2 0H5.374zM48.97 0l3.657 3.657-1.414 1.414L46.143 0h2.828zM11.03 0L7.372 3.657 8.787 5.07 13.857 0H11.03zm32.284 0L49.8 6.485 48.384 7.9l-7.9-7.9h2.83zM16.686 0L10.2 6.485 11.616 7.9l7.9-7.9h-2.83zm20.97 0l9.315 9.314-1.414 1.414L34.828 0h2.83zM22.344 0L13.03 9.314l1.414 1.414L25.172 0h-2.83zM32 0l12.142 12.142-1.414 1.414L30 .828 17.272 13.556l-1.414-1.414L28 0h4zM.284 0l28 28-1.414 1.414L0 2.544V0h.284zM0 5.373l25.456 25.455-1.414 1.415L0 8.2V5.374zm0 5.656l22.627 22.627-1.414 1.414L0 13.86v-2.83zm0 5.656l19.8 19.8-1.415 1.413L0 19.514v-2.83zm0 5.657l16.97 16.97-1.414 1.415L0 25.172v-2.83zM0 28l14.142 14.142-1.414 1.414L0 30.828V28zm0 5.657L11.314 44.97 9.9 46.386l-9.9-9.9v-2.828zm0 5.657L8.485 47.8 7.07 49.212 0 42.143v-2.83zm0 5.657l5.657 5.657-1.414 1.415L0 47.8v-2.83zm0 5.657l2.828 2.83-1.414 1.413L0 53.456v-2.83zM54.627 60L30 35.373 5.373 60H8.2L30 38.2 51.8 60h2.827zm-5.656 0L30 41.03 11.03 60h2.828L30 43.858 46.142 60h2.83zm-5.656 0L30 46.686 16.686 60h2.83L30 49.515 40.485 60h2.83zm-5.657 0L30 52.343 22.343 60h2.83L30 55.172 34.828 60h2.83zM32 60l-2-2-2 2h4zM59.716 0l-28 28 1.414 1.414L60 2.544V0h-.284zM60 5.373L34.544 30.828l1.414 1.415L60 8.2V5.374zm0 5.656L37.373 33.656l1.414 1.414L60 13.86v-2.83zm0 5.656l-19.8 19.8 1.415 1.413L60 19.514v-2.83zm0 5.657l-16.97 16.97 1.414 1.415L60 25.172v-2.83zM60 28L45.858 42.142l1.414 1.414L60 30.828V28zm0 5.657L48.686 44.97l1.415 1.415 9.9-9.9v-2.828zm0 5.657L51.515 47.8l1.414 1.413 7.07-7.07v-2.83zm0 5.657l-5.657 5.657 1.414 1.415L60 47.8v-2.83zm0 5.657l-2.828 2.83 1.414 1.413L60 53.456v-2.83zM39.9 16.385l1.414-1.414L30 3.658 18.686 14.97l1.415 1.415 9.9-9.9 9.9 9.9zm-2.83 2.828l1.415-1.414L30 9.313 21.515 17.8l1.414 1.413 7.07-7.07 7.07 7.07zm-2.827 2.83l1.414-1.416L30 14.97l-5.657 5.657 1.414 1.415L30 17.8l4.243 4.242zm-2.83 2.827l1.415-1.414L30 20.626l-2.828 2.83 1.414 1.414L30 23.456l1.414 1.414zM56.87 59.414L58.284 58 30 29.716 1.716 58l1.414 1.414L30 32.544l26.87 26.87z' fill='%23010101' fill-opacity='0.06' fill-rule='evenodd'/%3E%3C/svg%3E");
   font-family: 'Roboto', sans-serif;
-  background-color: #85419E;
   font-size: 20px;
   width: 100%;
   height: 100%;
@@ -67,7 +75,7 @@ header {
   display: none;
   flex-direction: column;
   justify-content: center;
-  background-color:#7C9E31;
+  background-color:var(--green);
   z-index: 11;
 }
 
@@ -88,6 +96,7 @@ header {
 
 #nav-links li a:hover {
   background-color: black;
+  border-radius: .5em;
   color: white;
 }
 
@@ -98,7 +107,7 @@ a.open-nav, a.close-nav {
   right: 15px;
   width: 60px;
   height: 50px;
-  background-color:#7C9E31;
+  background-color: var(--green);
   border-radius: .3em;
   z-index: 11;
 }
@@ -167,7 +176,7 @@ a.open-nav:hover .toggle::before, a.close-nav:hover .toggle::before {
 /* HERO SECTION */
 
 #hero {
-  background-color: #CD78EB;
+  background-color: var(--light-purp);
   width: 95%;
   max-width: 800px;
   padding: 20px;
@@ -175,10 +184,10 @@ a.open-nav:hover .toggle::before, a.close-nav:hover .toggle::before {
   font-weight: bolder;
   color: black;
   border-radius: .5em;
-  border: 1px solid rgba(0, 0, 0, 0.4);
 }
 
 #hero img{
+  margin-top: 20px;
   width: 400px;
   max-width: 100%;
   border-radius: .5em;
@@ -202,24 +211,25 @@ a.open-nav:hover .toggle::before, a.close-nav:hover .toggle::before {
 }
 
 #bio .subject {
-  margin-top: 100px;
   font-size: 33px;
   font-variant: small-caps;
   color: black;
 }
 
-#bio .answer, #directions {
-  background-color: #CD78EB;
+#bio .answer {
+  background-color: var(--light-purp);
   max-width: 600px;
   width: 95%;
   padding: 20px;
   border-radius: .5em;
-  margin: auto;
+  margin: 0 auto 5em;
 }
 
 /* HOBBIES SECTION */
 
 #hobbies {
+  margin-right: auto;
+  margin-left: auto;
   display: flex;
   flex-direction: column;
   max-width: 430px;
@@ -232,7 +242,6 @@ a.open-nav:hover .toggle::before, a.close-nav:hover .toggle::before {
 
 #hobbies div {
   margin: auto;
-  color: white;
   text-align: right;
 }
 
@@ -266,6 +275,7 @@ a.open-nav:hover .toggle::before, a.close-nav:hover .toggle::before {
 audio {
   display: block;
   margin: 50px auto;
+  padding: 0;
 }
 
 #hobbies li {
@@ -283,7 +293,7 @@ audio {
   width: 0;
   height: 0;
   border-top: 20px solid transparent;
-  border-left: 40px solid #7C9E31;
+  border-left: 40px solid var(--green);
   border-bottom: 20px solid transparent;
   margin-right: .5em;
 }
@@ -296,7 +306,7 @@ audio {
   text-align: center;
   border-radius: .5em;
   padding: 20px;
-  background-color: #CD78EB;
+  background-color: var(--light-purp);
 }
 
 figure img {
@@ -312,8 +322,7 @@ figcaption {
 }
 
 hr {
-  font-weight:900;
-  color: #c7eb78;
+  border: 2px solid var(--green);
 }
 
 /* LIT SECTION */
@@ -322,7 +331,7 @@ hr {
   margin: auto;
   max-width: 800px;
   width: 95%;
-  background-color: #CD78EB;
+  background-color: var(--light-purp);
   padding: 2rem 2rem;
   border-radius: .5em;
 }
@@ -332,9 +341,9 @@ hr {
   font-size: 120px;
   padding: 20px;
   margin: 10px;
-  background-color: #7C9E31;
+  background-color: var(--green);
   border-radius: 50% 40% 60% 50%;
-  border: 5px double #85419E;
+  border: 5px double var(--dark-purp);
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -345,7 +354,6 @@ hr {
   width: 95%;
   margin-right: auto;
   margin-left: auto;
-  color: white;
 }
 
 fieldset {
@@ -354,7 +362,7 @@ fieldset {
 }
 
 legend {
-  background-color: #CD78EB;
+  background-color: var(--light-purp);
   color: black;
   border-radius: .5em;
   padding: 10px;
@@ -376,7 +384,7 @@ legend {
 #form-elements button {
   padding: 12px 7px;
   font-size: 18px;
-  background-color: #7C9E31;
+  background-color: var(--green);
   border-radius: .5em;
   border: none;
   margin: 0;
@@ -384,7 +392,7 @@ legend {
 
 #form-elements button {
   margin: auto;
-  background-color: #7C9E31;
+  background-color: var(--green);
   color: black;
   font-family: 'Open Sans', sans-serif;
   font-variant: small-caps;
@@ -400,6 +408,7 @@ legend {
 
 #form-elements textarea {
   resize: vertical;
+  min-height: 100px;
 }
 
 #form ul {
@@ -423,7 +432,7 @@ li label::before {
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background-color: #7C9E31;
+  background-color: var(--green);
 }
 
 li input:checked + label::after {
@@ -439,7 +448,7 @@ li input:checked + label::after {
 }
 
 
-/* MUSIC SECTION */
+/* MUSIC SECTION 
 
 #directions {
   margin: auto;
@@ -498,7 +507,10 @@ li input:checked + label::after {
   border-bottom: 40px solid transparent;
 }
 
+*/
+
 /* VIDEO SECTION */
+
 #video-container {
   position: relative;
   padding-bottom: 80%;
@@ -518,7 +530,7 @@ li input:checked + label::after {
 
 #video figcaption {
   text-align: center;
-  background-color: #CD78EB;
+  background-color: var(--light-purp);
   width: 95%;
 }
 
@@ -530,10 +542,13 @@ li input:checked + label::after {
 
 footer {
   padding: 30px;
-  color: white;
   display: flex;
   flex-direction: column;
   font-size: .8em;
+}
+
+footer a {
+  color: black;
 }
 
 /*MEDIA QUERIES */
@@ -550,7 +565,7 @@ footer {
   }
   
   #back-to-top img:hover, #back-to-top img:active {
-    background-color: #7C9E31;
+    background-color: var(--green);
     border-radius: 50%;
   }
 
@@ -570,11 +585,13 @@ footer {
     display: block;
     font-size: 1em;
     position: absolute;
+    border-top-left-radius: .5em;
+    border-bottom-left-radius: .5em;
     top: 1em;
     right: 0;
     width: fit-content;
     padding: 0 2em;
-    background-color:#7C9E31;
+    background-color:var(--green);
   }
 
   #nav-links {
