--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,13 @@
 }
 
 :root {
-  --dark-purp: #d0a2e0;
-  --light-purp: #ebc7f7;
-  --green: #729c55;
-
+  --light-purp: #FFFFFF;
+  --green: #7B949C;
+  --special: #610012;
 }
 
 body {
-  background-color: var(--dark-purp);
+  background-color: #E8E7E6;
   background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M54.627 0l.83.828-1.415 1.415L51.8 0h2.827zM5.373 0l-.83.828L5.96 2.243 8.2 0H5.374zM48.97 0l3.657 3.657-1.414 1.414L46.143 0h2.828zM11.03 0L7.372 3.657 8.787 5.07 13.857 0H11.03zm32.284 0L49.8 6.485 48.384 7.9l-7.9-7.9h2.83zM16.686 0L10.2 6.485 11.616 7.9l7.9-7.9h-2.83zm20.97 0l9.315 9.314-1.414 1.414L34.828 0h2.83zM22.344 0L13.03 9.314l1.414 1.414L25.172 0h-2.83zM32 0l12.142 12.142-1.414 1.414L30 .828 17.272 13.556l-1.414-1.414L28 0h4zM.284 0l28 28-1.414 1.414L0 2.544V0h.284zM0 5.373l25.456 25.455-1.414 1.415L0 8.2V5.374zm0 5.656l22.627 22.627-1.414 1.414L0 13.86v-2.83zm0 5.656l19.8 19.8-1.415 1.413L0 19.514v-2.83zm0 5.657l16.97 16.97-1.414 1.415L0 25.172v-2.83zM0 28l14.142 14.142-1.414 1.414L0 30.828V28zm0 5.657L11.314 44.97 9.9 46.386l-9.9-9.9v-2.828zm0 5.657L8.485 47.8 7.07 49.212 0 42.143v-2.83zm0 5.657l5.657 5.657-1.414 1.415L0 47.8v-2.83zm0 5.657l2.828 2.83-1.414 1.413L0 53.456v-2.83zM54.627 60L30 35.373 5.373 60H8.2L30 38.2 51.8 60h2.827zm-5.656 0L30 41.03 11.03 60h2.828L30 43.858 46.142 60h2.83zm-5.656 0L30 46.686 16.686 60h2.83L30 49.515 40.485 60h2.83zm-5.657 0L30 52.343 22.343 60h2.83L30 55.172 34.828 60h2.83zM32 60l-2-2-2 2h4zM59.716 0l-28 28 1.414 1.414L60 2.544V0h-.284zM60 5.373L34.544 30.828l1.414 1.415L60 8.2V5.374zm0 5.656L37.373 33.656l1.414 1.414L60 13.86v-2.83zm0 5.656l-19.8 19.8 1.415 1.413L60 19.514v-2.83zm0 5.657l-16.97 16.97 1.414 1.415L60 25.172v-2.83zM60 28L45.858 42.142l1.414 1.414L60 30.828V28zm0 5.657L48.686 44.97l1.415 1.415 9.9-9.9v-2.828zm0 5.657L51.515 47.8l1.414 1.413 7.07-7.07v-2.83zm0 5.657l-5.657 5.657 1.414 1.415L60 47.8v-2.83zm0 5.657l-2.828 2.83 1.414 1.413L60 53.456v-2.83zM39.9 16.385l1.414-1.414L30 3.658 18.686 14.97l1.415 1.415 9.9-9.9 9.9 9.9zm-2.83 2.828l1.415-1.414L30 9.313 21.515 17.8l1.414 1.413 7.07-7.07 7.07 7.07zm-2.827 2.83l1.414-1.416L30 14.97l-5.657 5.657 1.414 1.415L30 17.8l4.243 4.242zm-2.83 2.827l1.415-1.414L30 20.626l-2.828 2.83 1.414 1.414L30 23.456l1.414 1.414zM56.87 59.414L58.284 58 30 29.716 1.716 58l1.414 1.414L30 32.544l26.87 26.87z' fill='%23010101' fill-opacity='0.06' fill-rule='evenodd'/%3E%3C/svg%3E");
   background-repeat: repeat;
   font-family: 'Roboto', sans-serif;
@@ -25,9 +24,24 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Open Sans', sans-serif;
   font-variant: small-caps;
-  font-size: 50px;
+  font-size: 2em;
+  font-weight: 600;
   margin: 30px;
   text-align: center;
+}
+
+h2 {
+  font-size: 1.6em;
+  color: var(--special);
+}
+
+h3 {
+  font-weight: 400;
+  font-size: 1.3em;
+}
+
+p, figcaption, div, label {
+  font-size: .95em;
 }
 
 section, article {
@@ -102,7 +116,7 @@ header {
 }
 
 #nav-links li a:hover {
-  background-color: black;
+  background-color: var(--special);
   border-radius: .5em;
   color: white;
 }
@@ -120,7 +134,7 @@ a.open-nav, a.close-nav {
 }
 
 a.open-nav:hover, a.close-nav:hover {
-  background-color: black;
+  background-color: var(--special);
 }
 
 a.close-nav {
@@ -183,45 +197,36 @@ a.open-nav:hover .toggle::before, a.close-nav:hover .toggle::before {
 /* HERO SECTION */
 
 #hero {
-  background-color: var(--light-purp);
+  background-color: #9C938A;
   max-width: 95%;
   height: auto;
   padding: 20px;
   margin-right: auto;
   margin-left: auto;
   font-weight: bolder;
-  color: black;
   border-radius: .5em;
+  color: var(--special);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.541),
+  -5px -5px 10px rgba(0, 0, 0, 0.514);
 }
 
-#hero img{
-  margin: 20px auto;
+#hero img {
+  margin: 20px;
   max-width: 100%;
   width: 80%;
   border-radius: .5em;
   border: 10px double black;
 }
 
-#hero h1 {
-  color: black;
-  font-size: 2em;
-}
-
 #hero h2 {
   color: black;
-  font-size: 1.5em;
+  font-size: 1.5em; 
 }
 
 /* BIO SECTION */
 
 #bio {
   text-align: center;
-}
-
-#bio .subject {
-  font-size: 33px;
-  font-variant: small-caps;
-  color: black;
 }
 
 #bio .answer {
@@ -235,25 +240,26 @@ a.open-nav:hover .toggle::before, a.close-nav:hover .toggle::before {
 
 /* HOBBIES SECTION */
 
-#hobbies {
-  margin-right: auto;
-  margin-left: auto;
+#hobbies-container {
   display: flex;
   flex-direction: column;
-  max-width: 430px;
   width: 95%;
+  background-color: var(--light-purp);
+  border-radius: .5em;
+  margin: auto;
+  padding: 10px 0;
+  max-width: 1000px;
 }
 
 #hobbies h2 {
   margin-bottom: 1em;
 }
 
-#hobbies div {
+#hobbies-container div {
   margin: auto;
-  text-align: right;
 }
 
-#hobbies ul {
+#hobbies-container ul {
   display: flex;
   flex-direction: column;
 }
@@ -286,10 +292,9 @@ a.open-nav:hover .toggle::before, a.close-nav:hover .toggle::before {
 
 audio {
   display: block;
-  margin: 50px auto;
+  margin: 10px auto;
   padding: 0;
 }
-
 
 #hobbies li::before {
   content: '';
@@ -382,10 +387,10 @@ legend {
 #form-elements {
   display: grid;
   row-gap: 15px;
+  padding: 20px 10px;
 }
 
 #form-elements label {
-  font-size: 22px;
   position: relative;
 }
 
@@ -393,8 +398,9 @@ legend {
 #form-elements select, 
 #form-elements textarea,
 #form-elements button {
+  font-family: 'Roboto', sans-serif;
   padding: 12px 7px;
-  font-size: 18px;
+  font-size: .95em;
   background-color: var(--green);
   border-radius: .5em;
   border: none;
@@ -413,7 +419,7 @@ legend {
 
 #form-elements button:hover, #form-elements button:active {
   color: white;
-  background-color: black;
+  background-color: var(--special);
   cursor: pointer;
 }
 
@@ -565,9 +571,27 @@ footer a {
 /*MEDIA QUERIES */
 
 @media screen and (min-width: 60em) {
-
+  
   section, article {
     margin-top: 120px;
+  }
+
+  h1 {
+    font-size: 2.2em;
+  }
+  
+  h2 {
+    font-size: 2em;
+    color: var(--special);
+  }
+  
+  h3 {
+    font-weight: 400;
+    font-size: 1.5em;
+  }
+  
+  p, figcaption, div, label {
+    font-size: 1em;
   }
 
   #back-to-top {
@@ -590,7 +614,8 @@ footer a {
     display: flex;
     flex-direction: row;
     align-content: center;
-    max-width: 800px;
+    max-width: 1000px;
+    width: 90%;
   }
 
   #hero img {
@@ -634,10 +659,6 @@ footer a {
     gap: 2em;
   }
 
-  h1, h2, h3, h4, h5, h6 {
-    font-size: 70px;
-  }
-
   figure {
     margin: 40px;
     display: grid;
@@ -665,9 +686,15 @@ footer a {
     background-color: initial;
   } */
 
-  #hobbies {
-    margin-right: auto;
-    margin-left: auto;
+  #hobbies-container ul {
+    padding: 20px 10% 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20%;
+  }
+
+  #hobbies-container div, audio {
+    margin-right: 2em;
   }
 
 }
@@ -699,24 +726,6 @@ footer a {
 
   #bio h2 {
     grid-column: 1/3;
-  }
-
-  #hobbies {
-    max-width: 90%;
-    display: block;
-  }
-
-  #hobbies ul {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-
-  #hobbies li {
-    text-align: center;
-  }
-
-  audio {
-    margin-right: 0;
   }
 
   #video-container {
